--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/logTabBrowser.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+        <!--Open Graph Meta-->
+        <meta property="og:title" content="Código Aventura">
+        <meta property="og:description" content="Comienza tu aventura programando">
+        <meta property="og:image" content="https://res.cloudinary.com/ddxlzqfid/image/upload/v1624990577/apps/c%C3%B3digo%20aventura/codigoAventura_compressed_grtqlr.jpg" >
+        <meta property='og:url' content='https://codigoaventura-2c741.firebaseapp.com/' />
+    
+        <!-- Twitter Meta-->
+        <meta name="twitter:title" content="Código Aventura">
+        <meta name="twitter:description" content="Comienza tu aventura programando">
+        <meta name="twitter:image" content="https://res.cloudinary.com/ddxlzqfid/image/upload/v1624990577/apps/c%C3%B3digo%20aventura/codigoAventura_compressed_grtqlr.jpg">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
